# AgentMaturityCompass

./: .dockerignore  .gitignore  AGENTS.md  AMC_ARMY_ROLES.md  AMC_IMPROVEMENT_ROADMAP.md  CHANGELOG.md  CONTINUATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runner  HANDOFF.md  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  NOW.md  PRODUCTION_MONITORING_IMPLEMENTATION.md  README.md  SCORE_HISTORY_IMPLEMENTATION.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  amc_product_queues.db  package-lock.json  package.json  qualification.md  sales_playbook.md  tsconfig.json  vercel.json
AMC_OS/PLATFORM/: Dockerfile  Makefile  README.md  amc_circuit_breaker.db  amc_feedback.db  amc_product_metering.db  amc_prompt_workflow_versions.json  amc_receipts.db  amc_routing.db  amc_stepup.db  autonomy.db  docker-compose.yml  pyproject.toml  run_full_validation.py
AMC_OS/PLATFORM/amc/: __init__.py  cli.py
AMC_OS/PLATFORM/amc/agents/: LCAB_AUTONOMOUS_REPORT.md  legal_contract_bot.py  run_lcab_autonomous.py
AMC_OS/PLATFORM/amc/api/: __init__.py  main.py
AMC_OS/PLATFORM/amc/benchmarks/: benchmark_suite.py
AMC_OS/PLATFORM/amc/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
AMC_OS/PLATFORM/amc/enforce/: __init__.py  e10_gateway_scanner.py  e11_mdns_controller.py  e12_reverse_proxy_guard.py  e13_ato_detection.py  e14_webhook_gateway.py  e15_abac.py  e16_approval_antiphishing.py  e17_dryrun.py  e18_secret_blind.py  e19_two_person.py  e1_policy.py  e20_payee_guard.py  e21_taint_tracking.py  e22_schema_gate.py  e23_numeric_checker.py  e24_evidence_contract.py  e25_config_linter.py  e26_mode_switcher.py  e27_temporal_controls.py  e28_location_fencing.py  e29_idempotency.py  e2_exec_guard.py  e30_cross_source_verify.py  e31_clipboard_guard.py  e32_template_engine.py  e33_watchdog.py  e34_consensus.py  e35_model_switchboard.py  e3_browser_guardrails.py  e4_egress_proxy.py  e5_circuit_breaker.py  e6_stepup.py  e7_sandbox_orchestrator.py  e8_session_firewall.py  e9_outbound.py
AMC_OS/PLATFORM/amc/product/: __init__.py  ab_testing.py  autonomy_dial.py  confidence.py  context_pack.py  conversation_state.py  cost_latency_router.py  data_quality.py  determinism_kit.py  dev_sandbox.py  error_translator.py  escalation.py  extractor.py  failure_clustering.py  features.py  features_wave2.py  glossary.py  goal_tracker.py  improvement.py  jobs.py  loop_detector.py  memory_consolidation.py  metering.py  persistence.py  persona.py  prompt_modules.py  replay_debugger.py  rollout_manager.py  scaffolding.py  scratchpad.py  tool_contract.py  tool_discovery.py  tool_parallelizer.py  tool_reliability.py  tool_semantic_docs.py  version_control.py
AMC_OS/PLATFORM/amc/score/: __init__.py  dimensions.py  questionnaire.py
AMC_OS/PLATFORM/amc/shield/: __init__.py  s10_detector.py  s11_attachment_detonation.py  s12_oauth_scope.py  s13_download_quarantine.py  s14_conversation_integrity.py  s15_threat_intel.py  s16_ui_fingerprint.py  s1_analyzer.py  s2_behavioral_sandbox.py  s3_signing.py  s4_sbom.py  s5_reputation.py  s6_manifest.py  s7_registry.py  s8_ingress.py  s9_sanitizer.py
AMC_OS/PLATFORM/amc/vault/: __init__.py  v10_undo_layer.py  v11_metadata_scrubber.py  v2_dlp.py  (+11 more)
AMC_OS/PLATFORM/tests/: test_ab_testing.py  test_api_product_orchestration.py  test_api_product_router.py  test_e12_proxy_guard.py  test_e14_signed_webhook.py  test_e23_numeric_checker.py  test_e30_cross_source_verify.py  test_e32_template_engine.py  test_e33_watchdog.py  test_e35_model_switchboard.py  test_product_context_pack.py  test_product_escalation.py  test_product_features.py  test_product_metering.py  test_product_persona.py  test_product_prompt_modules.py  test_product_queue_persistence.py  test_product_tool_semantic_docs.py  test_replay_debugger.py  test_rollout_manager.py  test_s14_conversation_integrity.py  test_s15_threat_intel.py  test_s16_ui_fingerprint.py  test_s3_signing.py  test_s7_registry.py  test_tool_discovery.py  test_tool_reliability.py  test_v2_dlp.py  test_v7_data_residency.py  test_wave2_modules.py
integrations/pytest-amc/: QUICKSTART.md  README.md  pyproject.toml  setup.py
integrations/pytest-amc/examples/: test_example.py
src/sdk/python/: __init__.py  amc_client.py  amc_middleware.py  pyproject.toml  test_amc_client.py
(+2434 files in other folders)
