[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amc-platform"
version = "2.0.0"
description = "Agent Maturity Compass — Full Trust & Safety Platform for Agent Systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AMC", email = "platform@agentmaturitycompass.com" }]

dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Async
    "httpx>=0.27.0",
    "anyio>=4.3.0",
    # Crypto / signing
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    # LLM (for S10 classifier)
    "anthropic>=0.25.0",
    "openai>=1.14.0",
    # Storage
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # Pattern detection (V2 DLP)
    "detect-secrets>=1.4.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    # SBOM / dependency scanning (S4)
    "cyclonedx-bom>=4.4.0",
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
docker = [
    "docker>=7.0.0",
]
vault = [
    "hvac>=2.1.0",         # HashiCorp Vault
    "boto3>=1.34.0",       # AWS Secrets Manager
]

[project.scripts]
amc = "amc.cli:app"
amc-server = "amc.api.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
