[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-amc"
version = "1.0.0"
description = "pytest plugin for Agent Maturity Compass scoring"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AMC Team", email = "hello@agentmaturitycompass.com"}
]
keywords = ["pytest", "plugin", "agent", "maturity", "amc"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/thewisecrab/AgentMaturityCompass"
Repository = "https://github.com/thewisecrab/AgentMaturityCompass"
Documentation = "https://thewisecrab.github.io/AgentMaturityCompass"

[project.entry-points.pytest11]
amc = "pytest_amc.plugin"

[tool.setuptools.packages.find]
where = ["src"]
