[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amc-sdk"
version = "0.1.0"
description = "Python SDK for the Agent Maturity Compass (AMC) Bridge API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
langchain = ["langchain>=0.1.0"]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.3.0"]
dev = ["pytest>=7.0", "httpx>=0.24.0"]
all = ["httpx>=0.24.0", "langchain>=0.1.0", "fastapi>=0.100.0", "flask>=2.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["amc_client*", "amc_middleware*"]
